<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_prelims"
        android:icon="@drawable/bring_forward_48px"
        android:title="@string/prelims" />

    <item
        android:id="@+id/navigation_mains"
        android:icon="@drawable/final_state_48px"
        android:title="@string/mains" />

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/vertical_timeline_48px"
        android:title="@string/timeline" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/combo_chart_48px"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/navigation_live"
        android:icon="@drawable/play_button_circled_48px"
        android:title="@string/live" />
</menu>