<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <VideoView
            android:id="@+id/video_content_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/download_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/download_24px" />

        <TextView
            android:id="@+id/learning_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="5dp"
            android:background="@drawable/round_outline_teal"
            android:fontFamily="@font/karla"
            android:text="@string/learning_analysis"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/video_content_view"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/title_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_content_view" />

        <TextView
            android:id="@+id/view_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/_80_640_views"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/gray_light"
            app:layout_constraintEnd_toEndOf="@+id/video_content_view"
            app:layout_constraintTop_toBottomOf="@+id/video_content_view" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="Rate It:"
            app:layout_constraintStart_toStartOf="@+id/video_title"
            app:layout_constraintTop_toBottomOf="@+id/video_title" />


        <com.willy.ratingbar.ScaleRatingBar
            android:id="@+id/simpleRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:srb_clearRatingEnabled="true"
            app:srb_clickable="true"
            app:srb_isIndicator="false"
            app:srb_minimumStars="1"
            app:srb_numStars="5"
            app:srb_rating="4"
            app:srb_scrollable="true"
            app:srb_starHeight="25dp"
            app:srb_starPadding="2dp"
            app:srb_starWidth="25dp"
            app:srb_stepSize="0.5" />

        <TextView
            android:id="@+id/like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_10k"
            app:layout_constraintEnd_toEndOf="@+id/view_count"
            app:layout_constraintTop_toBottomOf="@+id/view_count" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/like_count"
            app:layout_constraintEnd_toStartOf="@+id/like_count"
            app:layout_constraintTop_toTopOf="@+id/like_count"
            tools:srcCompat="@drawable/thumbs_up_24px" />

        <TextView
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_margin="15dp"
            android:background="#c0c0c0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/about_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="About Author/Video"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/author_dec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/about"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/about_author" />

        <TextView
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_margin="15dp"
            android:background="#c0c0c0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author_dec" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_video_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>