<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/time_line_fragment">

        <RelativeLayout
            android:id="@+id/rl_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="18dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="75dp"
                    android:background="@drawable/bottom_corners"
                    android:orientation="vertical"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.3"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/karla_bold"
                                android:padding="10dp"
                                android:text="@string/good_morning_ananth"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/colorAccent" />

                            <TextView
                                android:id="@+id/learning_analysis"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:background="@drawable/round_button_background"
                                android:fontFamily="@font/karla"
                                android:padding="10dp"
                                android:text="@string/learning_analysis"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center|bottom"
                            android:layout_weight="0.7"
                            android:gravity="center"
                            android:orientation="vertical">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/iv_user"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                app:civ_border_color="@color/white"
                                app:civ_border_width="1dp"
                                app:civ_circle_background_color="@color/white"
                                android:src="@drawable/administrator_male_100px" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card"
                android:layout_alignBottom="@id/card"
                android:layout_marginTop="-75dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/content_card"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/space"
                android:layout_alignTop="@id/space"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

        <TextView
            android:id="@+id/quick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/karla_bold"
            android:padding="10dp"
            android:text="@string/recommended_classes"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/gray_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quick" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="@+id/recyclerView"
            app:layout_constraintTop_toTopOf="@+id/recyclerView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>